--- a/src/TransData.App/Views/MainWindow.axaml
+++ b/src/TransData.App/Views/MainWindow.axaml
@@ -16,6 +16,17 @@
     <vm:MainWindowViewModel />
   </Design.DataContext>
 
-  <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+  <DockPanel>
+    <Menu DockPanel.Dock="Top">
+
+      <MenuItem Header="_File">
+        <MenuItem Header="_Open..." />
+        <Separator />
+        <MenuItem Header="E_xit" Command="{Binding ExitCommand}" />
+      </MenuItem>
+
+    </Menu>
+    <TextBlock />
+  </DockPanel>
 
 </Window>
