- support dynamically created menus

--- a/src/TransData.App/Views/MainWindow.axaml
+++ b/src/TransData.App/Views/MainWindow.axaml
@@ -19,10 +19,16 @@
   <DockPanel>
     <Menu DockPanel.Dock="Top">
 
-      <MenuItem Header="_File">
-        <MenuItem Header="_Open..." />
-        <Separator />
-        <MenuItem Header="E_xit" Command="{Binding ExitCommand}" />
+      <MenuItem Header="File" ItemsSource="{Binding FileMenuItems}" Classes="SubItems">
+        <MenuItem.Styles>
+          <Style Selector="MenuItem.SubItems MenuItem" x:DataType="vm:MenuItemViewModel">
+            <Setter Property="Header" Value="{Binding Header}" />
+            <Setter Property="Command" Value="{Binding Command}" />
+            <Setter Property="CommandParameter" Value="{Binding CommandParameter}" />
+            <Setter Property="IsEnabled" Value="{Binding IsEnabled}" />
+            <Setter Property="ItemsSource" Value="{Binding Items}" />
+          </Style>
+        </MenuItem.Styles>
       </MenuItem>
 
     </Menu>
