- show input/output files in UI

--- a/src/TransData.App/Views/MainWindow.axaml
+++ b/src/TransData.App/Views/MainWindow.axaml
@@ -32,7 +32,9 @@
       </MenuItem>
 
     </Menu>
-    <TextBlock />
+    
+    <TextBox DockPanel.Dock="Top" Text="{Binding InputFilePath, Mode=TwoWay}" />
+    <TextBox DockPanel.Dock="Top" Text="{Binding OutputFilePath, Mode=TwoWay}" />
   </DockPanel>
 
 </Window>
