--- a/src/TransData.App/Views/MainWindow.axaml
+++ b/src/TransData.App/Views/MainWindow.axaml
@@ -101,7 +101,7 @@
           <TextBox
             Grid.Row="1" Grid.Column="5" Grid.RowSpan="5"
             AcceptsReturn="True" TextWrapping="Wrap" 
-            Text="{Binding SelectedActiveColumnAction.Configuration}"/>
+            Text="{Binding SelectedActiveColumnAction.ConfigurationJson}"/>
         </Grid>
       </TabItem>
 
